objects/spr_sf__Conversation__c.object
<CustomObject>
    <fields>
        <fullName>spr_sf__Brand_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Brand Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>spr_sf__ChannelId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Channel  Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>spr_sf__Message_Sn_Created_Time__c</fullName>
        <label>Message Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>spr_sf__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>spr_sf__Permalink__c</fullName>
        <label>Permalink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>spr_sf__Receiver__c</fullName>
        <label>Receiver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>spr_sf__SF_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User who created this message</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Social_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>spr_sf__Social_Network__c</fullName>
        <label>Social Network</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>spr_sf__Social_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Social Profile</label>
        <referenceTo>spr_sf__Social_Profile__c</referenceTo>
        <relationshipLabel>Social Messages</relationshipLabel>
        <relationshipName>Conversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>spr_sf__Spr_Client_Id__c</fullName>
        <label>Spr Client Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>spr_sf__Spr_Source_Id__c</fullName>
        <label>Spr Source Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>spr_sf__Spr_Source__c</fullName>
        <label>Spr_Source</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>spr_sf__SprinklrId__c</fullName>
        <label>Sprinklr Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Social Message</label>
    <listViews>
        <fullName>spr_sf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Conversation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Social Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>